--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ flask-cors==5.0.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+PyJWT==2.10.1
 pymongo==4.11.2
 python-dotenv==1.0.1
 Werkzeug==3.1.3
